--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-.container { background-color: blue;
+.container1 { background-color: blue;
     width: 1200px;
     height: 400px;
     display: flex;
     justify-content: space-around;
+    margin-inline: auto;
 
 
     
